# satori-cli

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DISTRIBUTION.md  PLATFORM_SUPPORT.md  README.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.3.0.md  ROADMAP.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md  WHISPER_SETUP.md  mypy.ini  pyproject.toml  ruff.toml  satori-cli.rb
Formula/: satori-cli.rb  satori.rb
src/koescript/: cli.py
src/koescript/ai/: __init__.py  transcriber.py  whisper_cpp.py
src/koescript/audio/: __init__.py  capture.py
src/koescript/audio/backends/: __init__.py  base.py  soundcard_backend.py  wasapi_backend.py
src/koescript/commands/: __init__.py
src/koescript/config/: __init__.py  settings.py
src/koescript/models/: __init__.py
src/koescript/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
src/koescript/setup/: dependencies.py
src/koescript/ui/: __init__.py  app.py
src/koescript/utils/: __init__.py  logger.py
src/satori/: __init__.py  __main__.py  cli.py
src/satori/ai/: __init__.py  transcriber.py  translator.py  whisper_cpp.py
src/satori/audio/: __init__.py  capture.py  devices.py
src/satori/commands/: __init__.py
src/satori/config/: __init__.py  settings.py
src/satori/models/: __init__.py  downloader.py
src/satori/setup/: __init__.py  dependencies.py
src/satori/ui/: __init__.py  app.py
src/satori/ui/widgets/: __init__.py
src/satori/utils/: __init__.py  logger.py
