[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "satori-cli"
version = "0.1.1"
description = "Satori - A powerful live translation CLI tool"
readme = "README.md"
license = "MIT"
authors = [
    "Your Name <your.email@example.com>",
]
keywords = ["cli", "satori", "translation", "audio", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
]

packages = [
    { include = "satori", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.0"
rich = ">=13.0.0"
textual = ">=0.48.0"
soundcard = "^0.4"
faster-whisper = ">=1.0.0"
pydantic = "^2.0.0"
scipy = "^1.11.0"
SpeechRecognition = "^3.10.0"
PyAudio = "^0.2.14"
torch = "^2.0.0"
transformers = "^4.35.0"
sentencepiece = "^0.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.8.0"
pytest = "^7.4.0"
pytest-cov = "^4.0.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
satori = "satori.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["venv", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
profile = "black"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/satori --cov-report=term-missing"
